--- a/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
+++ b/Spring-06-SpringBoot-Demo/src/main/resources/templates/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <!--
-    container for metadata(is not displayed on the page) command + shift ?
-    -->
-    <!---->
+    <title>HTML Review</title>
+    <!-- container for metadata(is not displayed on the page) command + shift ? (for uncomment out in HTML file -->
+    <!--title , styles(css),links,scripts, meta and other goes under meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+          crossorigin="anonymous">
 </head>
 <body>
     <b>Welcome to java developer course </b>
 
     <h1 align="right" style="color: blue">Spring Boot</h1>
-    <h2>Spring Boot</h2>
-    <h3>Spring Boot</h3>
+    <h2 align="left" style="color: brown">Spring Boot</h2>
+    <h3 align="right" style="color: chocolate">Spring Boot</h3>
     <h4>Spring Boot</h4>
-<img src="" alt="spring boot image">
+    <br>
+
+<img src="/Users/meron1/Downloads/devRepos/spring/Spring-06-SpringBoot-Demo/src/main/resources/templates/IMG_3458.jpeg" alt="Meron pic">
 
     <ul>
         <li>Java</li>
@@ -23,6 +27,7 @@
         <li>ORM</li>
     </ul>
 <a href="https://cydeo.com">Cydeo</a>
+
 
 <br>
 
@@ -93,5 +98,43 @@
 
 </form>
 
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>John</td>
+            <td>Doe</td>
+            <td>jdoe@gmail.com</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Will</td>
+            <td>Johnson</td>
+            <td>will@yahoo.com</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Shannon</td>
+            <td>Williams</td>
+            <td>shannon@yahoo.com</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
 </body>
 </html>
