--- a/Spring-09-Spring-Thymleafe/src/main/resources/templates/mentor/mentor-confirmation.html
+++ b/Spring-09-Spring-Thymleafe/src/main/resources/templates/mentor/mentor-confirmation.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<div align="center">
 <body>
-  THIS IS YOUR SUBMITTED FORM !!!!!
-
 
 <h2 th:text="${mentor.firstName}"></h2>
 <h2 th:text="${mentor.lastName}"></h2>
@@ -15,4 +14,5 @@
 <h2 th:text="${mentor.company}"></h2>
 
 </body>
+</div>
 </html>
